--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <meta name="viewport" content="width=device-width">
       <title>Inventeurs - We Create Solutions</title>
 
-      <link rel="stylesheet" href="styles.9565e869.chunk.css">
-      <link rel="stylesheet" href="1.css">
+      <link rel="stylesheet" type="text/css" href="styles.9565e869.chunk.css">
+      <link rel="stylesheet" type="text/css" href="1.css">
  
    </head>
    <body>
