--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </div>
                      </div>
                      <div class="col-lg-6 pr-0">
-                        <div class="banner-four-main-img"><img src="\_next\static\images\main-img4-feb321c670eadee7f88148357d2b1c8c.png" alt="Image"></div>
+                        <div class="banner-four-main-img"><img src="_next\static\images\main-img4-feb321c670eadee7f88148357d2b1c8c.png" alt="Image"></div>
                      </div>
                   </div>
                </div>
