--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </div>
                      </div>
                      <div class="col-lg-6 pr-0">
-                        <div class="banner-four-main-img"><img src="_next\static\images\123.png" alt="Image"></div>
+                        <div class="banner-four-main-img"><img src="resources\123.png" alt="Image"></div>
                      </div>
                   </div>
                </div>
