--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
 
-        <a class="navbar-brand" href="#"><img src="/resources/logo/11.png" alt="logo" class="img-brand"><span
+        <a class="navbar-brand" href="#"><img src="resources/logo/11.png" alt="logo" class="img-brand"><span
             class="brand-name">INVENTEURS</span></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
