--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 
   <link rel="stylesheet" href="1.css">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -33,16 +38,19 @@
               <a class="nav-link asd" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">About Us</a>
+              <a class="nav-link asd" href="#2">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">Services</a>
+              <a class="nav-link asd" href="#3">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">News</a>
+              <a class="nav-link asd" href="#4">Outsourcing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">Contact Us</a>
+              <a class="nav-link asd" href="#5">Why Choose Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link asd" href="#6">Team</a>
             </li>
           </ul>
 
@@ -58,6 +66,14 @@
 
   <div class="heading1">
     <h1>INVENTEURS</h1>
+  </div>
+  <div class="heading2">
+    <h3>
+      Sharing Innovation for life.
+    </h3>
+    <h4>
+      We create, innovate and explore together.
+    </h4>
   </div>
 
   <!-- <div class="heading">
@@ -239,45 +255,53 @@
 
   <!-- Outsourcing -->
 
-  <section class="outsourcing">
+  <section class="outsourcing" id="4">
 
     <div class="container">
-      <div class="align-items-center">
-        <div class="outsourcing-title">
-          <span>Outsourcing</span>
-          <h2>Outsourcing Our Services</h2>
+      <div class="row align-items-center">
+        
+        <div class="col-lg-6">
+
+          <div class="outsourcing-title">
+            <span>Outsourcing</span>
+            <h2>Outsourcing Our Services</h2>
+          </div>
+
+          <p>We undertake project deployment, project development, project marketing, project planning and completion, and
+            a myriad of other services. We include maintaining and upgrading your current website, creating apps for your
+            business, setting up chatbot services, taking businesses online through e-commerce and social media support,
+            cloud hosted applications and going from server to serverless applications.</p>
+
+          <h5>Why should you outsource?</h5>
+          <p> Outsourcing results in lesser costs, increased efficiency and allows you to truly focus on your company’s
+            core competencies. Inventeurs has got you covered, with easy access to skills and resources to take care of
+            your company’s needs in a fast, cost-efficient way.
+          </p>
+
+          <h5>Our outsourcing model:</h5>
+
+          <ul>
+            <li>Clarify Project Requirements</li>
+            <li>Calculate the Time-frame and Budget of the Project</li>
+            <li>Choose the Type of Outsourcing</li>
+            <li>Ensure Efficient Communication</li>
+            <li>Focus on Your Core Competencies</li>
+          </ul>
+
         </div>
 
-        <p>We undertake project deployment, project development, project marketing, project planning and completion, and
-          a myriad of other services. We include maintaining and upgrading your current website, creating apps for your
-          business, setting up chatbot services, taking businesses online through e-commerce and social media support,
-          cloud hosted applications and going from server to serverless applications.</p>
-
-        <h5>Why should you outsource?</h5>
-        <p> Outsourcing results in lesser costs, increased efficiency and allows you to truly focus on your company’s
-          core competencies. Inventeurs has got you covered, with easy access to skills and resources to take care of
-          your company’s needs in a fast, cost-efficient way.
-        </p>
-
-        <h5>Our outsourcing model:</h5>
-
-        <ul>
-          <li>Clarify Project Requirements</li>
-          <li>Calculate the Time-frame and Budget of the Project</li>
-          <li>Choose the Type of Outsourcing</li>
-          <li>Ensure Efficient Communication</li>
-          <li>Focus on Your Core Competencies</li>
-        </ul>
+        <div class="col-lg-6">
+          <div class="about-img"><img src="resources/outsourcing/OUTSOURCING.svg" alt="Image"></div>
+        </div>
 
       </div>
     </div>
-
   </section>
 
 
   <!-- Why choose Us -->
 
-  <section class="choose-us">
+  <section class="choose-us" id="5">
 
     <div class="container">
       <div class="row align-items-center">
@@ -353,7 +377,7 @@
 
   <!-- Team -->
 
-  <section class="team-area">
+  <section class="team-area" id="6">
     <div class="container">
 
       <div class="team-title">
@@ -364,69 +388,73 @@
 
       <div class="row justify-content-center team-cards">
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-3 col-md-6">
           <div class="card text-center">
-            <img src="resources/team/1.jpg" class="card-img-top team-image" alt="chatbot">
+            <img src="resources/team/1.jpg" class="team-image" alt="chatbot">
             <div class="card-body">
               <div>
                 <h5 class="card-title">Mukul Khadke</h5>
-                <span>CEO</span>
+                <span>CEO &amp; Founder</span>
               </div>
               <ul>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/mukul-khadke/"><img src="resources/team/team-link.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://www.instagram.com/mukulk_"><img src="resources/team/team-insta.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://www.facebook.com/mukul.khadke.18"><img src="resources/team/team-face.svg" alt="" class="team-social"></a></li>
+                <li><a href=""><img src="resources/team/team-web.svg" alt="" class="team-social"></a></li>
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-3 col-md-6">
           <div class="card text-center">
-            <img src="resources/team/2.png" class="card-img-top team-image" alt="chatbot">
+            <img src="resources/team/00.png" class=" team-image" alt="chatbot">
             <div class="card-body">
               <div>
                 <h5 class="card-title">Aditya Mangla</h5>
-                <span>CMO</span>
+                <span>CMO &amp; Founder</span>
               </div>
               <ul>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/aadimangla/"><img src="resources/team/team-link.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://www.instagram.com/_aditya.11_"><img src="resources/team/team-insta.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://github.com/aadimangla"><img src="resources/team/team-git.svg" alt="" class="team-social"></a></li>
+                <li><a href=""><img src="resources/team/team-web.svg" alt="" class="team-social"></a></li>
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-3 col-md-6">
           <div class="card text-center">
-            <img src="resources/team/3.jpg" class="card-img-top team-image" alt="chatbot">
+            <img src="resources/team/3.jpg" class=" team-image" alt="chatbot">
             <div class="card-body">
               <div>
                 <h5 class="card-title">Anish Dutta</h5>
-                <span>CTO</span>
+                <span>CTO &amp; Founder</span>
               </div>
               <ul>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/anish-dutta"><img src="resources/team/team-link.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://www.instagram.com/anish_dutta11/"><img src="resources/team/team-insta.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://github.com/anishdutta"><img src="resources/team/team-git.svg" alt="" class="team-social"></a></li>
+                <li><a href=""><img src="resources/team/team-web.svg" alt="" class="team-social"></a></li>
               </ul>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
-          <div class="card text-center">
-            <img src="resources/team/4.png" class="card-img-top team-image" alt="chatbot">
+        <div class="col-lg-3 col-md-6">
+          <div class="card text-center" >
+            <img src="resources/team/4.png" class=" team-image" alt="chatbot" >
             <div class="card-body">
               <div>
                 <h5 class="card-title">Utkarsh Shukla</h5>
-                <span>COO</span>
+                <span>COO &amp; Founder</span>
               </div>
               <ul>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
-                <li><a href=""><img src="resources/social_media/twitter.svg" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/utkarsh-shukla-377193173/"><img src="resources/team/team-link.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://www.instagram.com/darklordlucifer98/"><img src="resources/team/team-insta.svg" alt="" class="team-social"></a></li>
+                <li><a href="https://github.com/Utkarsh-Techinal"><img src="resources/team/team-git.svg" alt="" class="team-social"></a></li>
+                <li><a href=""><img src="resources/team/team-web.svg" alt="" class="team-social"></a></li>
               </ul>
             </div>
           </div>
@@ -439,7 +467,7 @@
 
   <!-- Newsletter -->
 
-  <!-- <div class="newsletter-area">
+   <div class="newsletter-area">
     <div class="container">
       <div class="row">
 
@@ -466,11 +494,11 @@
 
       </div>
     </div>
-  </div> -->
+  </div>
 
   <!-- Footer -->
 
-  <footer class="footer-top" id="5">
+  <footer class="footer-top">
     <div class="container">
       <div class="row">
 
@@ -485,13 +513,13 @@
             <p>WE CREATE. WE TRANSFORM. WE INNOVATE.</p>
             <ul class="social-f">
               <li><a target="_blank" href="https://www.facebook.com/InventeursTech"><img
-                    src="resources/social_media/twitter.svg" alt=""></a></li>
+                    src="resources/footer/footer-face.svg" alt="" class="f-icon"></a></li>
               <li><a target="_blank" href="https://twitter.com/Inventeurs1"><img
-                    src="resources/social_media/twitter.svg" alt=""></a></li>
+                    src="resources/footer/footer-twitter.svg" alt="" class="f-icon"></a></li>
               <li><a target="_blank" href="https://www.instagram.com/inventeurs_tech/"><img
-                    src="resources/social_media/twitter.svg" alt=""></a></li>
+                    src="resources/footer/footer-insta.svg" alt="" class="f-icon"></a></li>
               <li><a target="_blank" href="https://www.linkedin.com/company/inventeurs/"><img
-                    src="resources/social_media/twitter.svg" alt=""></a></li>
+                    src="resources/footer/footer-link.svg" alt="" class="f-icon"></a></li>
             </ul>
           </div>
         </div>
@@ -570,7 +598,7 @@
     <div class="container-fluid c-bottom">
       <div class="row">
         <div class="col-lg-12 align-f">
-          <p>Copyright © 2020 INVENTEURS. All Rights Reserved</p>
+          <p>Copyright © 2021 INVENTEURS. All Rights Reserved</p>
         </div>
       </div>
 
