new-Pages(Incomplete)

--- a/new/index.html
+++ b/new/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300:italic" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     
-    <!-- Main Section -->
+    Main Section -->
     <link rel="stylesheet" href="main/main.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script  src="main/main.js"></script>
-    <!-- Main Section -->
+    <!-- Main Section
 
     <!-- Navbar -->
     <link rel="stylesheet" href="navbar/nav.css">
