--- a/New folder/index.html
+++ b/New folder/index.html
@@ -46,7 +46,7 @@
     <nav class="navbar navbar-expand-lg navbar-light clr">
       <div class="container-fluid">
 
-        <a class="navbar-brand" href="#"><img src="resources/logo/11.png" alt="logo" class="img-brand">
+        <a class="navbar-brand" href="index.html"><img src="resources/logo/11.png" alt="logo" class="img-brand">
           <!-- <span
             class="brand-name">INVENTEURS
           </span> -->
@@ -61,13 +61,13 @@
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link asd" href="#">Home</a>
+              <a class="nav-link asd" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">About Us</a>
+              <a class="nav-link asd" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link asd" href="#">Clients</a>
+              <a class="nav-link asd" href="clients.html">Clients</a>
             </li>
             <li class="nav-item">
               <a class="nav-link asd" href="#">Services</a>
