--- a/Optical/cart.html
+++ b/Optical/cart.html
@@ -28,7 +28,7 @@
 <body class="grey-bg">
   <div class="container">
     <section id="navigation">
-       
+
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="./public/images/eye logo.png"></a>
@@ -39,16 +39,23 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto float-end">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"><i class="fas fa-home fa-2x"></i></a>
+                <a class="nav-link " aria-current="page" href="index.html"><i class="fas fa-home fa-2x"></i></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="products.html"><i class="fas fa-search fa-2x"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="profile.html"><i class="fas fa-user fa-2x"></i></a>
+                <div class="dropdown">
+                  <a class="nav-link profile" href="profile.html"><i class="fas fa-user fa-2x"></i></a>
+                  <div class="dropdown-content">
+                    <a href="./login.html">LOGIN</a>
+                    <a href="./signup.html">SIGNUP</a>
+                    <!-- <a href="#"></a> -->
+                  </div>
+                </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a class="nav-link active" href="cart.html"><i class="fas fa-shopping-cart fa-2x"></i></a>
               </li>
             </ul>
           </div>
