--- a/Optical/products.html
+++ b/Optical/products.html
@@ -40,10 +40,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto float-end">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html"><i class="fas fa-home fa-2x"></i></a>
+                <a class="nav-link active" aria-current="page" href="#"><i class="fas fa-home fa-2x"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="products.html"><i class="fas fa-search fa-2x"></i></a>
+                <a class="nav-link" href="products.html"><i class="fas fa-search fa-2x"></i></a>
               </li>
               <li class="nav-item">
                 <div class="dropdown">
